--- a/main.css
+++ b/main.css
@@ -10,32 +10,17 @@ body{
     align-items: center;
 }
 
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff ;
-    background-color: #000;
-    width: 100%;
-    z-index: 20;
-    position: sticky;
-    top: 0;
-    padding: 1.5em 0em;
-}
-
 calculator{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 2em;
-    border: 2px solid #000;
-    padding: 1em;
-    row-gap: 1em;
-}
-
-.top{
-    margin-top: 2em;
+    border: 0px;
+    padding:3em 1em;
+    border-radius: 25px;
+    row-gap: 3em;
+    background-color: #dadada;
 }
 
 /* textbox{
@@ -44,7 +29,7 @@ calculator{
 
 .input{
     color: #000;
-    background-color: #dadada;
+    background-color: #fff;
     border: 0px;
     border-radius: 10px;
     padding: 0.5em;
@@ -64,4 +49,16 @@ buttons{
 button{
     width: 4em;
     height: 4em;
+}
+
+row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 1em;
+}
+
+p{
+    font-weight: bold;
+    
 }
